# nexus_game-launcher

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
nexus/src-tauri/: .env.example  .gitignore  Cargo.toml  build.rs  tauri.conf.json
nexus/src-tauri/capabilities/: default.json  popout.json
nexus/src-tauri/icons/: icon.icns
nexus/src-tauri/src/: dedup.rs  lib.rs
nexus/src-tauri/src/commands/: achievements.rs  analytics.rs  backup.rs  ceremony.rs  clipboard.rs  collections.rs  database.rs  dedup.rs  error.rs  events.rs  games.rs  hardware.rs  health.rs  jsonbin.rs  known_issues.rs  launcher.rs  mastery.rs  metadata.rs  milestones.rs  mod.rs  ping.rs  playtime.rs  queue.rs  scanner.rs  sessions.rs  settings.rs  sources.rs  streak.rs  tags.rs  tests.rs  twitch.rs  utils.rs  version_check.rs  window.rs  wrapped.rs  xp.rs
nexus/src-tauri/src/db/: migrations.rs  mod.rs
nexus/src-tauri/src/db/migrations/: 001_initial_schema.sql  002_dedup_schema.sql  003_potential_exe_names.sql  004_game_scores.sql  005_hltb_times.sql  006_remove_hltb_columns.sql  007_twitch_cache_tables.sql  008_twitch_trending_cache.sql  009_session_source_columns.sql  010_hltb_times_v2.sql  (+12 more)
nexus/src-tauri/src/gdrive/: api.rs  auth.rs  mod.rs  tokens.rs
nexus/src-tauri/src/metadata/: cache.rs  hltb.rs  igdb.rs  mod.rs  pipeline.rs  placeholders.rs  steamgriddb.rs
nexus/src-tauri/src/models/: achievement.rs  analytics.rs  ceremony.rs  collection.rs  game.rs  mastery.rs  milestone.rs  mod.rs  queue.rs  session.rs  settings.rs  streak.rs  tag.rs  wrapped.rs  xp.rs
nexus/src-tauri/src/sources/: battlenet.rs  epic.rs  gog.rs  mod.rs  standalone.rs  steam.rs  ubisoft.rs  watcher.rs  xbox.rs
nexus/src-tauri/src/twitch/: api.rs  auth.rs  cache.rs  embed_server.rs  eventsub_worker.rs  mod.rs  refresh_worker.rs  token_manager.rs  tokens.rs  trending.rs  watch_history.rs
nexus/src-tauri/src/utils/: connectivity.rs
(+315 files in other folders)
